# kth-qa

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
files/: IA249X202312.txt  ID2211202311.txt  ID2225202311.txt  II143X202312.txt  SA2001202311.txt  courses.txt  dd2424.txt  dd2477.txt
kth_qa/: __init__.py  config.py  courses.json  courses_spring.json  gpt.py  index.html  ingest.py  ingest_pinecone.py  lorem.txt  magic.py  main.py  model_types.py  schema.py  test_response.json  utils.py
kth_qa/magic/: conversational.py  prompts.py  self_query_retriever.py  vectordb.py
kth_qa/static/: styles.css
kth_qa/templates/: index.html
webscrapeattempt/: soup_scraper.py  webscraper.py
webscrapeattempt/webscrape/Scripts/: activate  activate.bat
webscraping/: scrape_course.py  scrape_info.py  scrape_settings.py  soup_scraper.py
