[tool.poetry]
name = "kth-qa"
version = "0.1.0"
description = "A question & answering app for kth.se"
authors = ["Your Name <you@example.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.129"
fastapi = "^0.95.0"
requests = "^2.28.2"
uvicorn = "^0.21.1"
openai = "^0.27.2"
chromadb = "^0.3.20"
python-multipart = "^0.0.6"
Jinja2 = "^3.1.2"
aiofiles = "^23.1.0"
arel = "0.2.*"
tiktoken = "^0.3.3"
selenium = "^4.9.0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
